Finalized working version

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -6,6 +6,7 @@
     --clr-secondary: #6a26cd;
     --clr-dark: #100f10;
     --clr-light: #f7f7fe;
+    --clr-error: #f13737;
     --clr-gray100: #f9fbff;
     --clr-gray150: #f4f6fb;
     --clr-gray200: #eef1f6;
